force-app/main/default/objects/Apttus_Billing__RelatedARTransaction2__c/Apttus_Billing__RelatedARTransaction2__c.object-meta.xml
<CustomObject>
    <description>Represents a single AR transaction related to the Invoice, Credit Memo, Payment, Refund etc..</description>
    <label>Related A/R Transaction</label>
    <nameField>
        <displayFormat>TX-{0000000000}</displayFormat>
        <label>Related Txn Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related A/R Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>