force-app/main/default/objects/Apttus_Billing__RelatedARTransaction2__c/fields/Apttus_Billing__DestinationCreditMemoId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__DestinationCreditMemoId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The destination credit memo where the A/R transaction is applied to.</description>
    <inlineHelpText>The destination credit memo where the A/R transaction is applied to.</inlineHelpText>
    <label>Destination Credit Memo Id</label>
    <referenceTo>Apttus_Billing__CreditMemo__c</referenceTo>
    <relationshipLabel>Destination Related A/R Transactions</relationshipLabel>
    <relationshipName>DestinationRelatedARTransactions</relationshipName>
    <type>Lookup</type>
</CustomField>