force-app/main/default/objects/Apttus_Billing__RelatedARTransaction2__c/fields/Apttus_Billing__DestinationInvoiceId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__DestinationInvoiceId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The destination invoice where the A/R transaction is applied to.</description>
    <inlineHelpText>The destination invoice where the A/R transaction is applied to.</inlineHelpText>
    <label>Destination Invoice Id</label>
    <referenceTo>Apttus_Billing__Invoice__c</referenceTo>
    <relationshipLabel>Destination Related A/R Transactions (Destination Invoice Id)</relationshipLabel>
    <relationshipName>DestinationRelatedARTransactions</relationshipName>
    <type>Lookup</type>
</CustomField>