force-app/main/default/objects/Apttus_Billing__RelatedARTransaction2__c/fields/Apttus_Billing__DestinationPaymentId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__DestinationPaymentId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The destination Payment Id of the A/R transaction.</description>
    <inlineHelpText>The destination Payment Id of the A/R transaction.</inlineHelpText>
    <label>Destination Payment Id</label>
    <referenceTo>Apttus_Billing__Payment__c</referenceTo>
    <relationshipLabel>Related A/R Transactions (Destination Payment Id)</relationshipLabel>
    <relationshipName>DestinationRelatedARTransactions</relationshipName>
    <type>Lookup</type>
</CustomField>