force-app/main/default/objects/Apttus_Billing__RelatedARTransaction2__c/fields/Apttus_Billing__ReasonCode__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__ReasonCode__c</fullName>
    <description>Allows integrations to write in the reason code for the transaction.</description>
    <inlineHelpText>Allows integrations to write in the reason code for the transaction.</inlineHelpText>
    <label>Reason Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>