force-app/main/default/objects/Apttus_Billing__RelatedARTransaction2__c/fields/Apttus_Billing__SourceInvoiceId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__SourceInvoiceId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The source invoice from where the A/R transaction is originated.</description>
    <inlineHelpText>The source invoice from where the A/R transaction is originated.</inlineHelpText>
    <label>Source Invoice Id</label>
    <referenceTo>Apttus_Billing__Invoice__c</referenceTo>
    <relationshipLabel>Source Related A/R Transactions</relationshipLabel>
    <relationshipName>SourceRelatedARTransactions</relationshipName>
    <type>Lookup</type>
</CustomField>