force-app/main/default/objects/Apttus_Billing__RelatedARTransaction2__c/fields/Apttus_Billing__SourceLateFeeId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__SourceLateFeeId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the corresponding Late Fee.</description>
    <inlineHelpText>For the transaction types that pertain to a Late Fee this is the reference to the (source) Late Fee that was applied to a (destination) Invoice.</inlineHelpText>
    <label>Source Late Fee Id</label>
    <referenceTo>Apttus_Billing__LateFee__c</referenceTo>
    <relationshipLabel>Related A/R Transactions (Source Late Fee Id)</relationshipLabel>
    <relationshipName>SourceRelatedARTransactions</relationshipName>
    <type>Lookup</type>
</CustomField>