force-app/main/default/objects/Apttus_Billing__RelatedARTransaction2__c/fields/Apttus_Billing__SourcePaymentId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__SourcePaymentId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The source payment Id of the A/R transaction.</description>
    <inlineHelpText>The source payment Id of the A/R transaction.</inlineHelpText>
    <label>Source Payment Id</label>
    <referenceTo>Apttus_Billing__Payment__c</referenceTo>
    <relationshipLabel>Related A/R Transactions</relationshipLabel>
    <relationshipName>SourceRelatedARTransactions</relationshipName>
    <type>Lookup</type>
</CustomField>