force-app/main/default/objects/Apttus_Billing__RelatedARTransaction2__c/fields/Apttus_Billing__StartingBalance__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__StartingBalance__c</fullName>
    <description>The balance before applying the transaction</description>
    <inlineHelpText>The balance before applying the transaction</inlineHelpText>
    <label>Starting Balance</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>