force-app/main/default/objects/Apttus_Billing__RelatedARTransaction2__c/fields/Apttus_Billing__TxnAmount__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__TxnAmount__c</fullName>
    <description>The transaction amount</description>
    <inlineHelpText>The transaction amount</inlineHelpText>
    <label>Txn Amount</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>