force-app/main/default/objects/Apttus_Billing__RelatedARTransaction2__c/fields/Apttus_Billing__TxnNumber__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__TxnNumber__c</fullName>
    <description>The transaction number</description>
    <externalId>true</externalId>
    <inlineHelpText>The transaction number</inlineHelpText>
    <label>Txn Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>